functionality and styling

--- a/js/threads.html
+++ b/js/threads.html
@@ -1,12 +1,26 @@
-<h1>THREADSSSSS HTML</h1>
+<div class="threadsTop">
+<h1>It's Lit, Fam</h1>
+</div>
 
-<!-- {{message}} -->
+
+
+<div class="box">
+<div class="threadsInput">
+<input class= "threadsInput" type="text" ng-model="newThread.title" placeholder="Thread Title:">
+<input class= "threadsInput" type="text" ng-model="newThread.user" placeholder="Username:">
+<br/><br/>
+<button class="threadsButton" ng-click="createNewThread(newThread)">submit</button>
+</div>
+</div>
 
 <div class ="box">
-  <div ng-repeat="thread in threads">
+  Existing Threads
+  <br/>
+  <br/>
+  <div class="newThread" ng-repeat="thread in threads" ui-sref="thread({threadId: threads.$id})">
     <strong>{{thread.title}}</strong> (created by {{thread.user}})
 
-    <a ui-sref="thread({threadId: threads.$id})">view thread</a>
+    <!-- <a ui-sref="thread({threadId: threads.$id})">view thread</a> -->
     <br/>
 
   </div>
@@ -15,7 +29,11 @@
 <br/>
 <br/>
 <br/>
-
-<input type="text" ng-model="newThread.title" placeholder="New Thread Title:">
-<input type="text" ng-model="newThread.user" placeholder="Username:">
-<button ng-click="createNewThread(newThread)">submit</button>
+<!-- <div class="box">
+<div class="threadsInput">
+<input class= "threadsInput" type="text" ng-model="newThread.title" placeholder="Thread Title:">
+<input class= "threadsInput" type="text" ng-model="newThread.user" placeholder="Username:">
+<br/><br/>
+<button class="threadsButton" ng-click="createNewThread(newThread)">submit</button>
+</div>
+</div> -->
