--- a/js/thread.html
+++ b/js/thread.html
@@ -1,23 +1,27 @@
-<center>
-
-  <button ui-sref="threads">back</button>
-  <h1>THREAD HTML</h1>
-
-
-
-
-  <input ng-model="comment.user" placeholder="Username:"></input>
-  <input ng-model="comment.text" placeholder="text:"></input>
-  <button ng-click="createNewComment(comment)">send</button>
-</center>
-<br/>
-
-<div ng-repeat="comment in comments">
-  <strong>{{comment.user}}:</strong>
-  <br/>
-  <h3>{{comment.text}}</h3>
-  <br/>
-  <br/>
+<div class="threadsTop">
+  <h1>It's Lit, Fam</h1>
 </div>
 
-</center>
+
+
+<div class="box">
+
+  <input ng-hide="hideUserBox" class="threadText" ng-model="comment.user" placeholder="username"></input>
+<br>
+  <textarea  class="threadText" ng-model="comment.text" placeholder="message"></textarea>
+  <br/>
+  <button ng-click="createNewComment(comment)">send</button>
+  <br/>
+</div>
+<div class="box">
+    <div class="commentsBox">
+      <div class="threadComments" ng-repeat="comment in comments">
+
+        <strong>{{comment.user}}:</strong>
+        <br/>
+        <h3>{{comment.text}}</h3>
+        <br/>
+      </div>
+    </div>
+  </div>
+</div>
